missing 'addtionalProps' on search request body
