# gen/python/dmss_api/models/__init__.py
@@ -19,6 +19,5 @@ from dmss_api.models.inline_object1 import InlineObject1
 from dmss_api.models.inline_object2 import InlineObject2
 from dmss_api.models.inline_object3 import InlineObject3
 from dmss_api.models.inline_object4 import InlineObject4
-from dmss_api.models.inline_object5 import InlineObject5
 from dmss_api.models.inline_response200 import InlineResponse200
 from dmss_api.models.inline_response2001 import InlineResponse2001
